<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Laugh Machine!</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="textoabout">Concept by Mymma Soto \nApplication developed by Pedro Santangelo \nIcons by Icons-Land \nhttp://www.icons-land.com</string>
	<string name="pedouno">1</string>
    <string name="pedodos">2</string>
    <string name="pedotres">3</string>
    <string name="pedocuatro">4</string>
    <string name="pedocinco">5</string>
    <string name="pedoseis">6</string>
    <string name="pedosiete">7</string>
    <string name="pedoocho">8</string>
    <string name="pedonueve">9</string>
    <string name="pedodiez">10</string>
    <string name="pedoonce">11</string>
    <string name="pedodoce">12</string>
    <string name="pedotrece">13</string>
    <string name="pedocatorce">14</string>
    <string name="pedoquince">15</string>
    <string name="pedodieciseis">16</string>
    <string name="pedodiecisiete">17</string>
    <string name="pedodieciocho">18</string>
    <string name="pedodiecinueve">19</string>
    <string name="pedoveinte">20</string>
    <string name="pedoventiuno">21</string>  
    <string name="pedoventidos">22</string>
    <string name="pedoventitres">23</string>
    <string name="pedoventicuatro">24</string>
    <string name="pedoventicinco" translatable="false">25</string>
    <string name="pedoventiseis" translatable="false">26</string>
    <string name="pedoventisiete" translatable="false">27</string>
    <string name="pedoventiocho" translatable="false">28</string>
    <string name="Salir">Exit</string>
    <string name="Acerca">About...</string>
    <string name="Otras_apps">Other apps</string>
    <string name="send_to" translatable="false">Send to</string>
    <string name="Rate">Rate</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="subject1">Look at this app!</string>
    <string name="extra_text1">This app is very funny! \n Try it! \n https://play.google.com/store/apps/details?id=com.aplanetbit.laugh.sound</string>
</resources>