<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/layout/main.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">

            <TableRow>

                <Button android:id="@+id/pedounoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedouno"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodosPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodos"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedotresPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedotres"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedocuatroPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedocuatro"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

            </TableRow>
            <TableRow>

                <Button android:id="@+id/pedocincoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedocinco"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoseisPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoseis"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedosietePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedosiete"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoochoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoocho"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>
            </TableRow>
            <TableRow>

                <Button android:id="@+id/pedonuevePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedonueve"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodiezPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodiez"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedooncePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoonce"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodocePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodoce"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>
            </TableRow>

            <TableRow>

                <Button android:id="@+id/pedotrecePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedotrece"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedocatorcePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedocatorce"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoquincePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoquince"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodieciseisPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodieciseis"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

            </TableRow>
            <TableRow>

                <Button android:id="@+id/pedodiecisietePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodiecisiete"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodieciochoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodieciocho"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedodiecinuevePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedodiecinueve"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoveintePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoveinte"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>
            </TableRow>
            <TableRow>

                <Button android:id="@+id/pedoventiunoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventiuno"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventidosPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventidos"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventitresPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventitres"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventicuatroPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventicuatro"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>
            </TableRow>
            <TableRow>

                <Button android:id="@+id/pedoventicincoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventicinco"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventiseisPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventiseis"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventisietePlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventisiete"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>

                <Button android:id="@+id/pedoventiochoPlayerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:background="@drawable/custom_button_pedo"
                    android:text="@string/pedoventiocho"
                    android:textStyle="bold"
                    android:textSize="53dp"
                    android:textColor="#ff0000"/>


            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
